--- a/home.html
+++ b/home.html
@@ -34,22 +34,29 @@
     <div class=" col-sm-3 col-md-3 col-lg-2 sidenav">
       <button type="button" class="btn btn-danger btn-block btn-menu">Busca por linha</button>
       <button type="button" class="btn btn-danger btn-block btn-menu">Busca por referência</button>
+      <button type="button" class="btn btn-danger btn-block btn-menu">Preferidos</button>
       <button type="button" class="btn btn-danger btn-block btn-menu">Feed de noticias</button>
     </div>
 
     <div class=" col-sm-9 col-md-9 col-lg-10 text-left"> 
-      <h1>Busca por Linha</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-      <hr>
-      <h3>llolololololo</h3>
-      <p>Lorem ipsum...</p>
-      <hr>
+      <h1 id = "busca" >Busca por Linha</h1>
     </div>
+
+    <div class="container col-sm-8 col-md-8 col-lg-9">
+      <form class="form-inline" action="/action_page.php">
+        <div class="form-group">
+          <input id = "barralinha" type="text" class="form-control" placeholder="Digite aqui sua linha">
+          <button type="submit" class="btn btn-danger">Filtrar</button>
+          <button type="submit" class="btn btn-danger">Buscar</button>
+        </div>
+      </form>
+    </div>
+    
   </div>
 </div>
 
 <footer class="container-fluid text-center">
-  <p>Footer Text</p>
+  <p>copirighet</p>
 </footer>
 
 </body>
