Tabela de linhas adicionada falta fazer scroll, fiz os botoes ficarem responsivos tambem

--- a/home.html
+++ b/home.html
@@ -42,22 +42,63 @@
       <h1 id = "busca" >Busca por Linha</h1>
     </div>
 
-    <div class="container col-sm-8 col-md-8 col-lg-9">
-      <form class="form-inline" action="/action_page.php">
-        <div class="form-group">
-          <input id = "barralinha" type="text" class="form-control" placeholder="Digite aqui sua linha">
-          <button type="submit" class="btn btn-danger">Filtrar</button>
-          <button type="submit" class="btn btn-danger">Buscar</button>
-        </div>
-      </form>
+    <div class="container col-sm-8 col-md-8 col-lg-9 ">
+			
+		<form id = "barralinha" >
+		  <div class="row">
+		    <div class="col col-sm-8 col-md-8col-lg-9">
+		      <input type="text" class="form-control" placeholder="Busca por linha">
+		    </div>
+		    <div class="col col-sm-4 col-md-4 col-lg-3">
+		     <button type="submit" class="btn btn-danger">Filtrar</button>
+		      <button type="submit" class="btn btn-danger">Buscar</button>
+		    </div>
+		  </div>
+		</form>
+		
+			<div  class="table-responsive" >      
+			  <table class="table table-striped">
+			    <thead>
+			      <tr>
+			        <th>	Numero</th>
+			        <th>	Nome</th>
+			        <th>	Info</th>
+					<th>	Favorito</th>
+			      </tr>
+			    </thead>
+			    <tbody>
+			      <tr>
+			        <td>2</td>
+			        <td>usp campos 1</td>
+			        <td>mais informações</td>
+					<td>favoritar</td>
+			      </tr>
+			      <tr>
+			       <td>2</td>
+			        <td>usp campos 1</td>
+			        <td>mais informações</td>
+					<td>favoritar</td>
+			      </tr>
+				  <tr>
+			       <td>2</td>
+			        <td>usp campos 1</td>
+			        <td>mais informações</td>
+					<td>favoritar</td>
+			      </tr>
+				  <tr>
+			       <td>2</td>
+			        <td>usp campos 1</td>
+			        <td>mais informações</td>
+					<td>favoritar</td>
+			      </tr>
+			    </tbody>
+			  </table>
+			</div>
+		
     </div>
     
   </div>
 </div>
-
-<footer class="container-fluid text-center">
-  <p>copirighet</p>
-</footer>
 
 </body>
 </html>
