--- a/home.html
+++ b/home.html
@@ -38,18 +38,18 @@
       <button type="button" class="btn btn-danger btn-block btn-menu">Feed de noticias</button>
     </div>
 
-    <div class=" col-sm-9 col-md-9 col-lg-10 text-left"> 
+    <div class=" col-sm-9 col-md-9 col-lg-10 text-left main-content"> 
       <h1 id = "busca" >Busca por Linha</h1>
     </div>
 
-    <div class="container col-sm-9 col-md-9 col-lg-10 ">
+    <div class="container col-sm-9 col-md-9 col-lg-10 main-content">
 		
 			<form id = "barralinha" >
 				<div class="row">
 					<div class="col col-sm-8 col-md-8 col-lg-9">
 						<input type="text" class="form-control" placeholder="Busca por linha">
 					</div>
-					<div class="col col-sm-4 col-md-4 col-lg-3">
+					<div class="col col-sm-4 col-md-4 col-lg-3 btm-search">
 					<button type="submit" class="btn btn-danger">Filtrar</button>
 						<button type="submit" class="btn btn-danger">Buscar</button>
 					</div>
@@ -91,7 +91,104 @@
 			        <td>usp campos 1</td>
 			        <td>mais informações</td>
 					<td>favoritar</td>
-			      </tr>
+						</tr>
+						<tr>
+							<td>2</td>
+							 <td>usp campos 1</td>
+							 <td>mais informações</td>
+					 <td>favoritar</td>
+						 </tr>
+						 <tr>
+							<td>2</td>
+							 <td>usp campos 1</td>
+							 <td>mais informações</td>
+					 <td>favoritar</td>
+						 </tr>
+						 <tr>
+							<td>2</td>
+							 <td>usp campos 1</td>
+							 <td>mais informações</td>
+					 <td>favoritar</td>
+						 </tr>
+						 <tr>
+							<td>2</td>
+							 <td>usp campos 1</td>
+							 <td>mais informações</td>
+					 <td>favoritar</td>
+						 </tr>
+						 <tr>
+							<td>2</td>
+							 <td>usp campos 1</td>
+							 <td>mais informações</td>
+					 <td>favoritar</td>
+						 </tr>
+						 <tr>
+							<td>2</td>
+							 <td>usp campos 1</td>
+							 <td>mais informações</td>
+					 <td>favoritar</td>
+						 </tr>
+						 <tr>
+							<td>2</td>
+							 <td>usp campos 1</td>
+							 <td>mais informações</td>
+					 <td>favoritar</td>
+						 </tr>
+						 <tr>
+							<td>2</td>
+							 <td>usp campos 1</td>
+							 <td>mais informações</td>
+					 <td>favoritar</td>
+						 </tr>
+						 <tr>
+							<td>2</td>
+							 <td>usp campos 1</td>
+							 <td>mais informações</td>
+					 <td>favoritar</td>
+						 </tr>
+						 <tr>
+							<td>2</td>
+							 <td>usp campos 1</td>
+							 <td>mais informações</td>
+					 <td>favoritar</td>
+						 </tr>
+						 <tr>
+							<td>2</td>
+							 <td>usp campos 1</td>
+							 <td>mais informações</td>
+					 <td>favoritar</td>
+						 </tr>
+						 <tr>
+							<td>2</td>
+							 <td>usp campos 1</td>
+							 <td>mais informações</td>
+					 <td>favoritar</td>
+						 </tr>
+						 <tr>
+							<td>2</td>
+							 <td>usp campos 1</td>
+							 <td>mais informações</td>
+					 <td>favoritar</td>
+						 </tr>
+						 <tr>
+							<td>2</td>
+							 <td>usp campos 1</td>
+							 <td>mais informações</td>
+					 <td>favoritar</td>
+						 </tr>
+						 <tr>
+							<td>2</td>
+							 <td>usp campos 1</td>
+							 <td>mais informações</td>
+					 <td>favoritar</td>
+						 </tr>
+						 <tr>
+							<td>2</td>
+							 <td>usp campos 1</td>
+							 <td>mais informações</td>
+					 <td>favoritar</td>
+						 </tr>
+						 
 			    </tbody>
 			  </table>
 			</div>
