Site com scroll apenas interno na lista de linhas

--- a/home.html
+++ b/home.html
@@ -38,19 +38,19 @@
       <button type="button" class="btn btn-danger btn-block btn-menu">Feed de noticias</button>
     </div>
 
-    <div class=" col-sm-9 col-md-9 col-lg-10 text-left main-content"> 
+    <div class=" col-sm-9 col-md-9 col-lg-10 text-left"> 
       <h1 id = "busca" >Busca por Linha</h1>
     </div>
 
-    <div class="container col-sm-9 col-md-9 col-lg-10 main-content">
+    <div class="container col-sm-9 col-md-9 col-lg-10 ">
 		
 			<form id = "barralinha" >
 				<div class="row">
 					<div class="col col-sm-8 col-md-8 col-lg-9">
 						<input type="text" class="form-control" placeholder="Busca por linha">
 					</div>
-					<div class="col col-sm-4 col-md-4 col-lg-3 btm-search">
-					<button type="submit" class="btn btn-danger">Filtrar</button>
+					<div class="col col-sm-4 col-md-4 col-lg-3">
+						<button type="submit" class="btn btn-danger">Filtrar</button>
 						<button type="submit" class="btn btn-danger">Buscar</button>
 					</div>
 				</div>
@@ -61,10 +61,10 @@
 			  <table class="table table-striped">
 			    <thead>
 			      <tr>
-			        <th>	Numero</th>
-			        <th>	Nome</th>
-			        <th>	Info</th>
-					<th>	Favorito</th>
+			        <th>Numero</th>
+			        <th>Nome</th>
+			        <th>Info</th>
+							<th>Favorito</th>
 			      </tr>
 			    </thead>
 			    <tbody>
@@ -72,7 +72,7 @@
 			        <td>2</td>
 			        <td>usp campos 1</td>
 			        <td>mais informações</td>
-					<td>favoritar</td>
+							<td>favoritar</td>
 			      </tr>
 			      <tr>
 			       <td>2</td>
@@ -93,102 +93,84 @@
 					<td>favoritar</td>
 						</tr>
 						<tr>
-							<td>2</td>
-							 <td>usp campos 1</td>
-							 <td>mais informações</td>
-					 <td>favoritar</td>
-						 </tr>
-						 <tr>
-							<td>2</td>
-							 <td>usp campos 1</td>
-							 <td>mais informações</td>
-					 <td>favoritar</td>
-						 </tr>
-						 <tr>
-							<td>2</td>
-							 <td>usp campos 1</td>
-							 <td>mais informações</td>
-					 <td>favoritar</td>
-						 </tr>
-						 <tr>
-							<td>2</td>
-							 <td>usp campos 1</td>
-							 <td>mais informações</td>
-					 <td>favoritar</td>
-						 </tr>
-						 <tr>
-							<td>2</td>
-							 <td>usp campos 1</td>
-							 <td>mais informações</td>
-					 <td>favoritar</td>
-						 </tr>
-						 <tr>
-							<td>2</td>
-							 <td>usp campos 1</td>
-							 <td>mais informações</td>
-					 <td>favoritar</td>
-						 </tr>
-						 <tr>
-							<td>2</td>
-							 <td>usp campos 1</td>
-							 <td>mais informações</td>
-					 <td>favoritar</td>
-						 </tr>
-						 <tr>
-							<td>2</td>
-							 <td>usp campos 1</td>
-							 <td>mais informações</td>
-					 <td>favoritar</td>
-						 </tr>
-						 <tr>
-							<td>2</td>
-							 <td>usp campos 1</td>
-							 <td>mais informações</td>
-					 <td>favoritar</td>
-						 </tr>
-						 <tr>
-							<td>2</td>
-							 <td>usp campos 1</td>
-							 <td>mais informações</td>
-					 <td>favoritar</td>
-						 </tr>
-						 <tr>
-							<td>2</td>
-							 <td>usp campos 1</td>
-							 <td>mais informações</td>
-					 <td>favoritar</td>
-						 </tr>
-						 <tr>
-							<td>2</td>
-							 <td>usp campos 1</td>
-							 <td>mais informações</td>
-					 <td>favoritar</td>
-						 </tr>
-						 <tr>
-							<td>2</td>
-							 <td>usp campos 1</td>
-							 <td>mais informações</td>
-					 <td>favoritar</td>
-						 </tr>
-						 <tr>
-							<td>2</td>
-							 <td>usp campos 1</td>
-							 <td>mais informações</td>
-					 <td>favoritar</td>
-						 </tr>
-						 <tr>
-							<td>2</td>
-							 <td>usp campos 1</td>
-							 <td>mais informações</td>
-					 <td>favoritar</td>
-						 </tr>
-						 <tr>
-							<td>2</td>
-							 <td>usp campos 1</td>
-							 <td>mais informações</td>
-					 <td>favoritar</td>
-						 </tr>
-						 
+								<td>2</td>
+								<td>usp campos 1</td>
+								<td>mais informações</td>
+								<td>favoritar</td>
+							</tr>
+							<tr>
+									<td>2</td>
+									<td>usp campos 1</td>
+									<td>mais informações</td>
+									<td>favoritar</td>
+								</tr>
+								<tr>
+										<td>2</td>
+										<td>usp campos 1</td>
+										<td>mais informações</td>
+										<td>favoritar</td>
+									</tr>
+									<tr>
+											<td>2</td>
+											<td>usp campos 1</td>
+											<td>mais informações</td>
+											<td>favoritar</td>
+										</tr>
+										<tr>
+												<td>2</td>
+												<td>usp campos 1</td>
+												<td>mais informações</td>
+												<td>favoritar</td>
+											</tr>
+											<tr>
+													<td>2</td>
+													<td>usp campos 1</td>
+													<td>mais informações</td>
+													<td>favoritar</td>
+												</tr>
+												<tr>
+														<td>2</td>
+														<td>usp campos 1</td>
+														<td>mais informações</td>
+														<td>favoritar</td>
+													</tr>
+													<tr>
+															<td>2</td>
+															<td>usp campos 1</td>
+															<td>mais informações</td>
+															<td>favoritar</td>
+														</tr>
+														<tr>
+																<td>2</td>
+																<td>usp campos 1</td>
+																<td>mais informações</td>
+																<td>favoritar</td>
+															</tr>
+															<tr>
+																	<td>2</td>
+																	<td>usp campos 1</td>
+																	<td>mais informações</td>
+																	<td>favoritar</td>
+																</tr>
+																<tr>
+																		<td>2</td>
+																		<td>usp campos 1</td>
+																		<td>mais informações</td>
+																		<td>favoritar</td>
+																	</tr>
+																	<tr>
+																			<td>2</td>
+																			<td>usp campos 1</td>
+																			<td>mais informações</td>
+																			<td>favoritar</td>
+																		</tr>
+																		<tr>
+																				<td>2</td>
+																				<td>usp campos 1</td>
+																				<td>mais informações</td>
+																				<td>favoritar</td>
+																			</tr>
+
 			    </tbody>
 			  </table>
 			</div>
