arrumando barra superior

--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<nav id = "barrasuperior" class="navbar navbar-inverse navbar-fixed-top">
+<nav id = "barrasuperior" class="navbar navbar-inverse  col-sm-12 col-md-12 col-lg-12 ">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -29,7 +29,7 @@
   </div>
 </nav>
   
-<div id = "subsuperior" class="container-fluid text-center">    
+<div class="container-fluid text-center">    
   <div class="row content">
     <div class=" col-sm-3 col-md-3 col-lg-2 sidenav ">
       <button type="button" class="btn btn-danger btn-block btn-menu">Busca por linha</button>
